MB-41092: Track prepares in collection persisted high seqno

A follow-up to the intial fix for MB-41092, if a warmup occurred
before the collection was dropped there was a possibility
that compaction would not be triggered.

1) Simplify Collection::Flush so that it tracks just one seqno
per collection, and that must include prepares.

2) Wire magma through so that it updates the value 1)

3) Update the unit tests to cover the case where a warm-up
occurs.

Change-Id: I9692acf1d1cbd19d907af6c2d5b475c6ecffb518
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/142097
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>